fix: update skiplink for better contrast to meet 4:5:1 wcag 2.1 AA

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -275,7 +275,7 @@ a:hover {
   left: 0;
   z-index: 100;
   padding: var(--space-sm) var(--space-md);
-  background: var(--root-color--secondary);
+  background: var(--root-color--secondary-dark);
   color: var(--root-color--white);
   text-decoration: none;
   font-weight: var(--root-font-weight--bold);
